# codeatlas

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/fixtures/: demo.py
backend/app/graph/: __init__.py  builder.py  import_resolution.py  search.py
backend/app/models/: __init__.py  api.py  graph.py  repository.py  symbols.py
backend/app/parsing/: __init__.py  base.py  javascript.py  language.py  python.py  registry.py  tree_sitter_config.py  tree_sitter_utils.py
backend/app/repositories/: __init__.py  errors.py  filtering.py  github.py
backend/app/services/: ai.py  analysis_cache.py  analyzer.py  request_limiter.py
backend/tests/: test_ai.py  test_api_sessions.py  test_api_validation.py  test_cors.py  test_graph_search.py  test_parsing_and_graph.py  test_repository_loading.py  test_request_limiter.py
docs/: validation.md
frontend/: index.html  package.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  api.test.ts  api.ts  graphUtils.test.ts  graphUtils.ts  layout.ts  types.ts
frontend/src/components/: AtlasNode.tsx  FileTree.tsx  FiltersBar.tsx  GraphCanvas.test.tsx  GraphCanvas.tsx  Inspector.test.tsx  Inspector.tsx  QuestionPanel.test.tsx  QuestionPanel.tsx  RepoInput.tsx
scripts/: backend.mjs
